# openapi-cpp-sdk

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeListsBak.txt  OpenApiCppSdk.sln  README.md  README_EN.md  boost_zip_info.txt  build_release_mt.ps1  changlog.md  framework.h  main.cpp  openapi-cpp-sdk.sln  openapi-cpp-sdk.vcxproj  openapi-cpp-sdk.vcxproj.filters  pch.h  vcpkg-configuration.json  vcpkg.json
OpenApiCppSdk/: Base64.cpp  Base64.h  Base64util.cpp  OpenApiCppSdk.cpp  OpenApiCppSdk.vcxproj  OpenApiCppSdk.vcxproj.filters  Sha1RSASign.h
demo/: CMakeLists.txt  result.txt  test_sign.hpp
demo/openapi_cpp_test/: openapi_cpp_test.cpp  openapi_cpp_test.vcxproj  openapi_cpp_test.vcxproj.filters
demo/src/: quote_client_demo.cpp
include/: zconf.h
include/cpprest/: astreambuf.h  asyncrt_utils.h  base_uri.h  containerstream.h  filestream.h  http_client.h  http_compression.h  http_headers.h  http_listener.h  http_msg.h  interopstream.h  json.h  oauth1.h  oauth2.h  producerconsumerstream.h  rawptrstream.h  streams.h  uri.h  uri_builder.h  version.h  ws_client.h  ws_msg.h
include/cpprest/details/: basic_types.h  cpprest_compat.h  fileio.h  http_helpers.h  http_server.h  http_server_api.h  nosal.h  resource.h  web_utilities.h
include/google/protobuf/: any.h  any.pb.h  api.pb.h  arena.h  arena_test_util.h  arenastring.h  descriptor.h  descriptor.pb.h  descriptor_database.h  duration.pb.h  dynamic_message.h  empty.pb.h  extension_set.h  field_mask.pb.h  generated_enum_reflection.h  generated_enum_util.h  generated_message_reflection.h  generated_message_util.h  has_bits.h  map.h  map_entry.h  map_entry_lite.h  map_field.h  map_field_inl.h  map_field_lite.h  map_lite_test_util.h  map_test_util.h  map_test_util_impl.h  map_type_handler.h  message.h  message_lite.h  metadata.h  parse_context.h  port_def.inc  reflection.h  reflection_internal.h  reflection_ops.h  repeated_field.h  service.h  source_context.pb.h  (+11 more)
include/google/protobuf/compiler/: code_generator.h  command_line_interface.h  importer.h  mock_code_generator.h  parser.h  plugin.h  plugin.pb.h
include/google/protobuf/compiler/cpp/: cpp_enum.h  cpp_extension.h  (+10 more)
include/google/protobuf/io/: coded_stream.h  coded_stream_inl.h  gzip_stream.h  printer.h  strtod.h  tokenizer.h  zero_copy_stream_impl.h  zero_copy_stream_impl_lite.h
include/google/protobuf/stubs/: atomic_sequence_num.h  atomicops.h  atomicops_internals_generic_gcc.h  atomicops_internals_mips_gcc.h  atomicops_internals_pnacl.h  atomicops_internals_power.h  atomicops_internals_ppc_gcc.h  bytestream.h  callback.h  casts.h  common.h  fastmem.h  hash.h  int128.h  logging.h  macros.h  map_util.h  mathlimits.h  mathutil.h  mutex.h  once.h  platform_macros.h  port.h  scoped_ptr.h  singleton.h  status.h  status_macros.h  statusor.h  stringpiece.h  strutil.h  template_util.h  time.h  type_traits.h
include/google/protobuf/testing/: file.h
include/google/protobuf/util/: field_comparator.h  field_mask_util.h  json_util.h  message_differencer.h  package_info.h  time_util.h  type_resolver.h  type_resolver_util.h
include/openapi_pb/pb_file/: KlineData.proto  OrderStatusData.proto  PositionData.proto  PushData.proto  QuoteBBOData.proto  QuoteBasicData.proto  QuoteData.proto  Request.proto  Response.proto  SocketCommon.proto  TickData.proto  TradeTickData.proto
include/openapi_pb/pb_source/: AssetData.pb.cc  AssetData.pb.h  KlineData.pb.cc  KlineData.pb.h  OptionTopData.pb.cc  OptionTopData.pb.h  OrderStatusData.pb.cc  OrderStatusData.pb.h  OrderTransactionData.pb.cc  OrderTransactionData.pb.h  PositionData.pb.cc  PositionData.pb.h  PushData.pb.cc  PushData.pb.h  QuoteBBOData.pb.cc  QuoteBBOData.pb.h  QuoteBasicData.pb.cc  QuoteBasicData.pb.h  QuoteData.pb.cc  QuoteData.pb.h  QuoteDepthData.pb.cc  QuoteDepthData.pb.h  Request.pb.cc  Request.pb.h  Response.pb.cc  Response.pb.h  SocketCommon.pb.cc  SocketCommon.pb.h  StockTopData.pb.cc  StockTopData.pb.h  TickData.pb.cc  TickData.pb.h  TradeTickData.pb.cc  TradeTickData.pb.h
include/openapi_pb/pb_tool_win/: AssetData.bat  KlineData.bat  OptionTopData.bat  OrderStatusData.bat  OrderTransactionData.bat  PositionData.bat  PushData.bat  QuoteBBOData.bat  QuoteBasicData.bat  QuoteData.bat  QuoteDepthData.bat  Request.bat  Response.bat  SocketCommon.bat  StockTopData.bat  TickData.bat  TradeTickData.bat
include/openssl/: bio.h  configuration.h  err.h  opensslv.h
include/pplx/: pplx.h  pplxcancellation_token.h  pplxconv.h  pplxinterface.h  pplxlinux.h  pplxtasks.h  pplxwin.h
include/tigerapi/: client_config.h  constants.h  contract_util.h  easylogging++.h  enums.h  log.h  logger.h  model.h  order_util.h  price_util.h  properties.h  push_client.h  quote_client.h  service_types.h  sign_util.h  tick_util.h  tiger_client.h  trade_client.h  utils.h  version.h  win32.h
include/tigerapi/push_socket/: push_client_impl.h  push_frame_serialize.h  push_socket.h
libs/: build_libs.sh
output/Debug/: openapi-cpp-sdk.lib
output/Mac/Release/: libprotobuf.dylib
output/Release/: openapi-cpp-sdk.ipdb  openapi-cpp-sdk.lib
output/Windows/: readme.md
output/lib/cmake/tigerapi/: tigerapiTargets-debug.cmake  tigerapiTargets.cmake
output/x64/Debug/: openapi-cpp-sdk.lib
output/x64/Release/: openapi-cpp-sdk.lib
scripts/: build_linux_mac.sh  build_windows.ps1  get_boost.ps1  install_windows_deps.ps1  package_linux.sh  package_mac.sh  package_windows.bat  package_windows.ps1
src/: algo_hmac.cpp  algo_hmac.h  base64.h  client_config.cpp  constants.h  contract_util.cpp  easylogging++.cc  easylogging++.cpp  logger.cpp  main.cpp  order_util.cpp  push_client.cpp  quote_client.cpp  tick_util.cpp  tiger_client.cpp  tigerapi.cpp  tigerapi.h  trade_client.cpp  utils.cpp  utils.h
src/common/: base64.h  easylogging++.cc  mac_addr_util.cpp  mac_addr_util.h  rsa_sign.h  rsa_sign.hpp  service_types.h  sign_util.h
src/push_socket/: push_client_impl.cpp  push_frame_serialize.cpp  push_socket.cpp
src/tests/: test_sign.hpp
vs-build/: tigerapi.vcxproj
win-build/: tigerapi.vcxproj  tigerapi.vcxproj.filters
(+24 files in other folders)
